5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1635_2711.log
== TEST (2019-04-08 15:47:00) 
-- CODE:
valor = float(input("reais: "))
ru = int(input("quant.: "))
valor_ru = float(input("vr: "))
bus_passes = int(input("bus: "))
valor_passes = float(input("vp: "))

if(valor_aluno > 300):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(valor_aluno > 300):
NameError: name 'valor_aluno' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:47:30) 
-- CODE:
valor = float(input("reais: "))
ru = int(input("quant.: "))
valor_ru = float(input("vr: "))
bus_passes = int(input("bus: "))
valor_passes = float(input("vp: "))

if(valor > 300):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
	
print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:47:42) 
-- CODE:
valor = float(input("reais: "))
ru = int(input("quant.: "))
valor_ru = float(input("vr: "))
bus_passes = int(input("bus: "))
valor_passes = float(input("vp: "))

if(valor > 300):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
	
print(mensagem)
-- EXECUTION TIME:
0.160568
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
